Limes: skip ingress for internal endpoint
The main motivation for this change is that connection to the ingress's
ExternalIP from inside the controlplane sometimes fails in the UAE and
China datacenters, but with an error rate too low to be able to
investigate.

--- a/openstack/limes/templates/seed.yaml
+++ b/openstack/limes/templates/seed.yaml
@@ -49,7 +49,7 @@ spec:
         - region:    '{{.Values.global.region}}'
           interface: internal
           enabled:   true
-          url:       '{{.Values.limes.clusters.ccloud.catalog_url}}'
+          url:       'http://limes-api-ccloud.{{.Release.Namespace}}.svc'
 
   domains:
     - name: Default
