elk: initial commit for es-query-exporter

--- a/system/elk/requirements.yaml
+++ b/system/elk/requirements.yaml
@@ -50,8 +50,8 @@ dependencies:
     version: 2.0.0
     condition: es-exporter.enabled
 
-  - name: es-query
-    alias: es_query
-    repository: file://vendor/es-query
+  - name: es-query-exporter
+    alias: es_query_exporter
+    repository: file://vendor/es-query-exporter
     version: 0.0.1
-    condition: es-query.enabled
+    condition: es-query-exporter.enabled
