move default values to chart and not to secrets

--- a/system/elk/values.yaml
+++ b/system/elk/values.yaml
@@ -32,6 +32,11 @@ es_exporter:
 
 es_query_exporter:
   enabled: false
+  version: '0.5.2'
+  listen_port: 9206
+  hostname: es-client.elk
+  protocol: http
+  port: 9200
   alerts:
     enabled: false
     prometheus: infra-frontend
