[neutron] increase memory limits of dhcp agent

--- a/openstack/neutron/templates/statefulset-network-agent.yaml
+++ b/openstack/neutron/templates/statefulset-network-agent.yaml
@@ -59,10 +59,10 @@ spec:
           resources:
             requests:
               cpu: "175m"
-              memory: "256Mi"
+              memory: "1Gi"
             limits:
               cpu: "256m"
-              memory: "512Mi"
+              memory: "2Gi"
           volumeMounts:
             - name: metadata-proxy
               mountPath: /run/metadata_proxy
