[neutron] change sftp host key to EC

--- a/openstack/neutron/templates/sftp-configmap.yaml
+++ b/openstack/neutron/templates/sftp-configmap.yaml
@@ -11,5 +11,5 @@ data:
   # swift-sftp
   swift-sftp.conf: |
 {{ include (print .Template.BasePath "/etc/_sftp.conf.tpl") . | indent 4 }}
-  ssh_host_rsa_key: |
-{{ include (print .Template.BasePath "/etc/_ssh_host_rsa_key.tpl") . | indent 4 }}
+  ssh_host_id_ec: |
+{{ include (print .Template.BasePath "/etc/_ssh_host_id_ec.tpl") . | indent 4 }}
