--- a/openstack/neutron/templates/sftp-deployment.yaml
+++ b/openstack/neutron/templates/sftp-deployment.yaml
@@ -22,7 +22,7 @@ spec:
       containers:
         - name: sftp
           image: hub.global.cloud.sap/monsoon/swift-sftp:20190711151344
-          args: ['server', '-f', '/etc/swift/swift-sftp.conf']
+          args: ['server', '-f', '/etc/swift-sftp.conf']
           env:
             - name: USERNAME
               value: {{ .Values.sftp.user | quote }}
@@ -36,13 +36,13 @@ spec:
               cpu: "500m"
               memory: "64Mi"
           volumeMounts:
-            - mountPath: /etc/swift/swift-sftp.conf
+            - mountPath: /etc/swift-sftp.conf
               name: neutron-sftp-backup
               subPath: swift-sftp.conf
               readOnly: true
-            - mountPath: /etc/swift/ssh_host_rsa_key
+            - mountPath: /etc/ssh_host_id_ec
               name: neutron-sftp-backup
-              subPath: ssh_host_rsa_key
+              subPath: ssh_host_id_ec
               readOnly: true
             - mountPath: /tmp
               name: cache-volume
