--- a/openstack/keppel/templates/configmap.yaml
+++ b/openstack/keppel/templates/configmap.yaml
@@ -7,21 +7,27 @@ metadata:
 data:
   policy.json: |
     {
-      "cloud_rw": "role:cloud_registry_admin",
-      "cloud_ro": "role:cloud_registry_viewer or rule:cloud_rw",
-      "project_rw": "role:registry_admin",
-      "project_ro": "role:registry_viewer or rule:project_rw",
-      "any_rw": "rule:cloud_rw or rule:project_rw",
-      "any_ro": "rule:cloud_ro or rule:project_ro",
+      "cloud_scope": "project_name:admin and project_domain_name:cloud_admin",
+      "cloud_admin": "role:admin and rule:cloud_scope",
+      "cloud_rw":    "role:cloud_registry_admin",
+      "cloud_ro":    "role:cloud_registry_viewer or rule:cloud_rw",
 
-      "account_matches_scope": "rule:cloud_ro or project_id:%(account_project_id)s",
+      "project_admin": "role:admin",
+      "project_rw":    "role:registry_admin",
+      "project_ro":    "role:registry_viewer or rule:project_rw",
+
+      "any_admin": "rule:cloud_admin or rule:project_admin",
+      "any_rw":    "rule:cloud_rw or rule:project_rw",
+      "any_ro":    "rule:cloud_ro or rule:project_ro",
+
+      "account_matches_scope": "rule:cloud_scope or project_id:%(account_project_id)s",
 
       "account:list": "rule:any_ro",
-      "account:show": "rule:any_ro and rule:account_matches_scope",
-      "account:pull": "rule:any_ro and rule:account_matches_scope",
-      "account:push": "rule:any_rw and rule:account_matches_scope",
-      "account:edit": "rule:any_rw and rule:account_matches_scope"
+      "account:show": "rule:any_ro    and rule:account_matches_scope",
+      "account:pull": "rule:any_ro    and rule:account_matches_scope",
+      "account:push": "rule:any_rw    and rule:account_matches_scope",
+      "account:edit": "rule:any_admin and rule:account_matches_scope"
     }
 
-  issuer-key.pem:  {{ index .Values.keppel.issuer "key.pem" | quote }}
-  issuer-cert.pem: {{ index  .Values.keppel.issuer "cert.pem" | quote }}
+  issuer-key.pem:  {{ index .Values.keppel.issuer "key.pem"  | quote }}
+  issuer-cert.pem: {{ index .Values.keppel.issuer "cert.pem" | quote }}
