--- a/system/elk/values.yaml
+++ b/system/elk/values.yaml
@@ -26,6 +26,8 @@ fluent:
 
 es_exporter:
   enabled: false
+  version: '1.1.0rc1'
+  listen_port: 9102
   alerts:
     enabled: false
     prometheus: infra-frontend
