--- a/system/elk/values.yaml
+++ b/system/elk/values.yaml
@@ -39,6 +39,7 @@ es_query_exporter:
   hostname: es-client.elk
   protocol: http
   port: 9200
+  log_level: 'ERROR'
   alerts:
     enabled: false
     prometheus: infra-frontend
