Allow kubernikus-terraform to have the domain admin role

--- a/openstack/kubernikus/templates/seed.yaml
+++ b/openstack/kubernikus/templates/seed.yaml
@@ -26,3 +26,5 @@ spec:
         role: cloud_dns_admin
       - project: master@ccadmin
         role: swiftoperator 
+      - domain: cp
+        role: admin
