--- a/openstack/octavia/templates/octavia-worker-deployment.yaml
+++ b/openstack/octavia/templates/octavia-worker-deployment.yaml
@@ -21,7 +21,8 @@ spec:
     spec:
       containers:
         - name: {{ .Chart.Name }}-worker
-          image: "loci/octavia:master-ubuntu"
+          image: {{required ".Values.global.imageRegistry is missing" .Values.global.imageRegistry}}/{{.Values.global.imageNamespace}}/loci-octavia:{{required "Values.imageVersion is missing" .Values.imageVersion}}
+          imagePullPolicy: IfNotPresent
           command: ["/var/lib/openstack/bin/octavia-worker"]
           resources:
 {{ toYaml .Values.resources | indent 12 }}
