--- a/openstack/castellum/values.yaml
+++ b/openstack/castellum/values.yaml
@@ -75,3 +75,31 @@ pgmetrics:
         - gauge:
             usage: "GAUGE"
             description: "Lowest greenlit_at timestamp of any pending operation in this project resource"
+    castellum_resource:
+      query: >
+        SELECT asset_type AS asset, MIN(scraped_at) AS min_scraped_at
+          FROM resources
+         GROUP BY asset_type
+      metrics:
+        - asset:
+            usage: "LABEL"
+            description: "Asset type"
+        - min_scraped_at:
+            usage: "GAUGE"
+            description: "Lowest scraped_at timestamp of any project resource with this asset type"
+    castellum_asset:
+      query: >
+        SELECT r.asset_type AS asset, MIN(a.checked_at) AS min_checked_at, MIN(a.scraped_at) AS min_scraped_at
+          FROM resources r
+          JOIN assets a ON a.resource_id = r.id
+          GROUP BY r.asset_type
+      metrics:
+        - asset:
+            usage: "LABEL"
+            description: "Asset type"
+        - min_checked_at:
+            usage: "GAUGE"
+            description: "Lowest checked_at timestamp of any asset with this type"
+        - min_scraped_at:
+            usage: "GAUGE"
+            description: "Lowest scraped_at timestamp of any asset with this type"
