Added new flavors for S4HANA

--- a/openstack/sap-seeds/templates/flavor-seed.yaml
+++ b/openstack/sap-seeds/templates/flavor-seed.yaml
@@ -6,11 +6,29 @@ spec:
   requires:
   - monsoon3/nova-flavor-seed
   flavors:
+  - name: "m1.smallhdd"
+    id: "21"
+    vcpus: "2"
+    ram: "2032"
+    disk: "40"
+    is_public: true
+    extra_specs:
+      "vmware:hv_enabled": "True"
+      "hw_video:ram_max_mb": "16"
   - name: "m1.xsmall"
     id: "22"
     vcpus: "2"
     ram: "4080"
     disk: "32"
+    is_public: true
+    extra_specs:
+      "vmware:hv_enabled": "True"
+      "hw_video:ram_max_mb": "16"
+  - name: "m1.xsmallhdd"
+    id: "23"
+    vcpus: "2"
+    ram: "4080"
+    disk: "40"
     is_public: true
     extra_specs:
       "vmware:hv_enabled": "True"
@@ -132,6 +150,15 @@ spec:
     extra_specs:
       "vmware:hv_enabled": "True"
       "hw_video:ram_max_mb": "16"
+  - name: "m2.10xlarge_cpu"
+    id: "123"
+    vcpus: "24"
+    ram: "262128"
+    disk: "40"
+    is_public: true
+    extra_specs:
+      "vmware:hv_enabled": "True"
+      "hw_video:ram_max_mb": "16"
   - name: "m2.3xlarge"
     id: "130"
     vcpus: "8"
@@ -168,6 +195,24 @@ spec:
     extra_specs:
       "vmware:hv_enabled": "True"
       "hw_video:ram_max_mb": "16"
+  - name: "m5.12xlarge"
+    id: "211"
+    vcpus: "48"
+    ram: "524272"
+    disk: "40"
+    is_public: true
+    extra_specs:
+      "vmware:hv_enabled": "True"
+      "hw_video:ram_max_mb": "16"
+  - name: "m5.14xlarge"
+    id: "212"
+    vcpus: "60"
+    ram: "524272"
+    disk: "40"
+    is_public: true
+    extra_specs:
+      "vmware:hv_enabled": "True"
+      "hw_video:ram_max_mb": "16"
   - name: "m5.16xlarge"
     id: "220"
     vcpus: "64"
@@ -186,6 +231,15 @@ spec:
     extra_specs:
       "vmware:hv_enabled": "True"
       "hw_video:ram_max_mb": "16"
+  - name: "m5.48xlarge"
+    id: "231"
+    vcpus: "96"
+    ram: "1048560"
+    disk: "40"
+    is_public: true
+    extra_specs:
+      "vmware:hv_enabled": "True"
+      "hw_video:ram_max_mb": "16"  
   - name: "m5.64xlarge"
     id: "240"
     vcpus: "128"
