[Keystone][MariaDB] Initial commit

--- a/openstack/keystone/templates/deployment-api.yaml
+++ b/openstack/keystone/templates/deployment-api.yaml
@@ -84,7 +84,7 @@ spec:
   {{- end }}
 {{- end }}
         - name: DEPENDENCY_SERVICE
-          value: {{ .Release.Name }}-postgresql,{{ .Release.Name }}-memcached
+          value: {{ .Release.Name }}-mariadb,{{ .Release.Name }}-memcached
         - name: COMMAND
           value: "true"
       containers:
