--- a/openstack/keystone/templates/deployment-cron.yaml
+++ b/openstack/keystone/templates/deployment-cron.yaml
@@ -53,7 +53,7 @@ spec:
   {{- end }}
 {{- end }}
         - name: DEPENDENCY_SERVICE
-          value: {{ .Release.Name }}-postgresql
+          value: {{ .Release.Name }}-mariadb
         - name: COMMAND
           value: "true"
       containers:
