--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -246,8 +246,14 @@ memcached:
       memory: 2560Mi
       cpu: 500m
 
-postgresql:
+mariadb:
   enabled: true
+  name: keystone
+  initdb_configmap: keystone-initdb
+  persistence_claim: db-keystone-pvclaim
+
+postgresql:
+  enabled: false
   custom_repository: true
   imageTag: "9.4.14"
 
