--- a/openstack/keystone/requirements.yaml
+++ b/openstack/keystone/requirements.yaml
@@ -11,3 +11,11 @@ dependencies:
   - name: pgmetrics
     repository: file://../../common/pgmetrics
     version: 0.1.0
+  - name: mariadb
+    repository: file://../../common/mariadb
+    version: 0.1.1
+    condition: mariadb.enabled
+  - name: mysql_metrics
+    repository: file://../../common/mysql_metrics
+    version: 0.1.0
+    condition: mariadb.enabled
