--- a/openstack/keystone/templates/job-bootstrap.yaml
+++ b/openstack/keystone/templates/job-bootstrap.yaml
@@ -42,7 +42,7 @@ spec:
             - name: NAMESPACE
               value: {{ .Release.Namespace }}
             - name: DEPENDENCY_SERVICE
-              value: {{ .Release.Name }}-postgresql
+              value: {{ .Release.Name }}-mariadb
             - name: DEPENDENCY_JOBS
               value: keystone-job-migration
             {{- if .Values.sentry.enabled }}
