increase retention time for prom-infra-collector

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -31,7 +31,7 @@ prometheus_infra_collector:
   name: infra-collector
   enabled: true
 
-  retentionTime: 15m
+  retentionTime: 1h
   scrapeInterval: "60s"
 
   additionalScrapeConfigs:
