--- a/openstack/neutron/templates/prometheus-alerts.yaml
+++ b/openstack/neutron/templates/prometheus-alerts.yaml
@@ -7,6 +7,8 @@ kind: PrometheusRule
 
 metadata:
   name: {{ printf "neutron-%s" $path | replace "/" "-" }}
+  annotations:
+    "helm.sh/hook": crd-install
   labels:
     app: neutron
     tier: os
