[neutron] use hook-delete-policy before applying alert definition

--- a/openstack/neutron/templates/prometheus-alerts.yaml
+++ b/openstack/neutron/templates/prometheus-alerts.yaml
@@ -8,7 +8,7 @@ kind: PrometheusRule
 metadata:
   name: {{ printf "neutron-%s" $path | replace "/" "-" }}
   annotations:
-    "helm.sh/hook": crd-install
+    "helm.sh/hook-delete-policy": "before-hook-creation"
   labels:
     app: neutron
     tier: os
