--- a/openstack/keppel/templates/deployment-api.yaml
+++ b/openstack/keppel/templates/deployment-api.yaml
@@ -45,6 +45,8 @@ spec:
               value: 'postgres://postgres:{{.Values.postgresql.postgresPassword}}@keppel-postgresql/keppel?sslmode=disable'
             - name:  KEPPEL_DRIVER_AUTH
               value: 'keystone'
+            - name:  KEPPEL_DRIVER_NAMECLAIM
+              value: 'trivial'
             - name:  KEPPEL_DRIVER_ORCHESTRATION
               value: 'local-processes'
             - name:  KEPPEL_DRIVER_STORAGE
