use KEPPEL_DRIVER_NAMECLAIM=openstack-basic

--- a/openstack/keppel/templates/deployment-api.yaml
+++ b/openstack/keppel/templates/deployment-api.yaml
@@ -46,7 +46,7 @@ spec:
             - name:  KEPPEL_DRIVER_AUTH
               value: 'keystone'
             - name:  KEPPEL_DRIVER_NAMECLAIM
-              value: 'trivial'
+              value: 'openstack-basic'
             - name:  KEPPEL_DRIVER_ORCHESTRATION
               value: 'local-processes'
             - name:  KEPPEL_DRIVER_STORAGE
@@ -55,6 +55,8 @@ spec:
               value: '/etc/keppel/issuer-cert.pem'
             - name:  KEPPEL_ISSUER_KEY
               value: '/etc/keppel/issuer-key.pem'
+            - name:  KEPPEL_NAMECLAIM_WHITELIST
+              value: "{{ range .Values.keppel.nameclaim_whitelist }}{{.project}}:{{.account}},{{end}}"
             - name:  KEPPEL_OSLO_POLICY_PATH
               value: '/etc/keppel/policy.json'
             - name: OS_AUTH_URL
