--- a/openstack/keppel/values.yaml
+++ b/openstack/keppel/values.yaml
@@ -7,6 +7,12 @@ keppel:
 
   service_password: DEFINED_IN_VALUES_FILE
 
+  # syntax:
+  #   nameclaim_whitelist:
+  #   - project: project@domain # can be a regex
+  #     account: foobar         # can be a regex
+  nameclaim_whitelist: []
+
   issuer:
     key.pem:  DEFINED_IN_VALUES_FILE
     cert.pem: DEFINED_IN_VALUES_FILE
