alerts for thanos sidecar and components + playbooks

--- a/common/prometheus-server/templates/thanos/prometheus-thanosStoreStatefulset.yaml
+++ b/common/prometheus-server/templates/thanos/prometheus-thanosStoreStatefulset.yaml
@@ -9,14 +9,14 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: thanos
+      app: thanos-store
       thanos-peers: "true"
       prometheus: {{ include "prometheus.name" . }}
   serviceName: thanos-store
   template:
     metadata:
       labels:
-        app: thanos
+        app: thanos-store
         thanos-peers: "true"
         prometheus: {{ include "prometheus.name" . }}
     spec:
