--- a/common/prometheus-server/values.yaml
+++ b/common/prometheus-server/values.yaml
@@ -173,6 +173,7 @@ thanos:
     key: thanos.yaml
     optional: true
 
+  # Specification for Thanos sidecar to Prometheus server.
   # See https://github.com/coreos/prometheus-operator/blob/master/Documentation/api.md#thanosspec .
   spec:
     image: "sapcc/thanos:v0.4.0-2-ga680c93"
