--- a/common/prometheus-server/templates/servicemonitors/prometheus.yaml
+++ b/common/prometheus-server/templates/servicemonitors/prometheus.yaml
@@ -26,6 +26,14 @@ spec:
         - action: replace
           targetLabel: prometheus
           replacement: {{ include "prometheus.name" . }}
+        - action: labelmap
+          regex: '__meta_kubernetes_service_label_(.+)'
+        - sourceLabels:
+            - __meta_kubernetes_namespace
+          targetLabel: kubernetes_namespace
+        - sourceLabels:
+            - __meta_kubernetes_service_name
+          targetLabel: kubernetes_name
         {{ if .Values.global.clusterType }}
         - action: replace
           targetLabel: cluster_type
