enable audit trail in Keppel

--- a/openstack/keppel/templates/deployment-api.yaml
+++ b/openstack/keppel/templates/deployment-api.yaml
@@ -39,6 +39,12 @@ spec:
               value: ':80'
             - name:  KEPPEL_API_PUBLIC_URL
               value: 'https://keppel.{{.Values.global.region}}.{{.Values.global.tld}}'
+            - name:  KEPPEL_AUDIT_SILENT
+              value: "{{ ne .Values.keppel.rabbitmq.uri "" }}"
+            - name:  KEPPEL_AUDIT_RABBITMQ_URI
+              value: "{{ .Values.keppel.rabbitmq.uri }}"
+            - name:  KEPPEL_AUDIT_RABBITMQ_QUEUE_NAME
+              value: "{{ .Values.keppel.rabbitmq.queue_name }}"
             - name:  KEPPEL_AUTH_LOCAL_ROLE
               value: 'swiftoperator'
             - name:  KEPPEL_DB_URI
