--- a/openstack/keppel/values.yaml
+++ b/openstack/keppel/values.yaml
@@ -16,3 +16,9 @@ keppel:
   issuer:
     key.pem:  DEFINED_IN_VALUES_FILE
     cert.pem: DEFINED_IN_VALUES_FILE
+
+  # Set to non-empty values to enable audit logging to Hermes.
+  rabbitmq:
+    uri: ""
+    queue_name: ""
+
