[octavia] enable pvclaim

--- a/openstack/octavia/values.yaml
+++ b/openstack/octavia/values.yaml
@@ -19,7 +19,7 @@ mariadb:
   enabled: true
   name: octavia
   initdb_configmap: octavia-initdb
-  #persistence_claim: db-octavia-pvclaim
+  persistence_claim: db-octavia-pvclaim
 
 ingress:
   annotations:
