--- a/common/prometheus-server/templates/thanos/prometheus-thanosCompactorService.yaml
+++ b/common/prometheus-server/templates/thanos/prometheus-thanosCompactorService.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   ports:
   - name: http
-    port: 9090
+    port: {{ required ".Values.thanos.compactor.service.httpPort missing" .Values.thanos.compactor.service.httpPort }}
     targetPort: http
   selector:
     app: thanos-compactor
