--- a/common/prometheus-server/templates/thanos/prometheus-thanosPeerService.yaml
+++ b/common/prometheus-server/templates/thanos/prometheus-thanosPeerService.yaml
@@ -8,16 +8,17 @@ metadata:
     prometheus: {{ include "prometheus.name" . }}
 
 spec:
+  type: ClusterIP
   clusterIP: None
   ports:
-  - name: cluster
-    port: 10900
-    targetPort: cluster
-  - name: http
-    port: 10902
-    targetPort: http
+    - name: cluster
+      port: 10900
+      targetPort: cluster
+    - name: http
+      port: 10902
+      targetPort: http
+
   selector:
     thanos-peers: "true"
     prometheus: {{ include "prometheus.name" . }}
-  type: ClusterIP
-{{ end }}
+{{- end }}
