--- a/common/prometheus-server/templates/thanos/prometheus-thanosQueryService.yaml
+++ b/common/prometheus-server/templates/thanos/prometheus-thanosQueryService.yaml
@@ -9,9 +9,13 @@ metadata:
 
 spec:
   ports:
-  - name: http-query
-    port: 9090
+  - name: http
+    port: {{ required ".Values.thanos.querier.service.httpPort missing" .Values.thanos.querier.service.httpPort }}
     targetPort: http
+  - name: grpc
+    port: {{ required ".Values.thanos.querier.service.grpcPort missing" .Values.thanos.querier.service.grpcPort }}
+    targetPort: grpc
+
   selector:
     app: thanos-query
     prometheus: {{ include "prometheus.name" . }}
