--- a/system/kube-monitoring/values.yaml
+++ b/system/kube-monitoring/values.yaml
@@ -106,6 +106,7 @@ prometheus-frontend-operated:
   # Send alerts to these alertmanagers.
   alertmanagers:
     - alertmanager.eu-de-1.cloud.sap
+    - alertmanager.internet.eu-de-2.cloud.sap
 
 # Deploy basic set of Prometheus alert and aggregation rules for monitoring Kubernetes.
 prometheus-kubernetes-rules:
