supernova: remove obsolete code, add pagerduty credential envs

--- a/global/supernova/templates/deployment.yaml
+++ b/global/supernova/templates/deployment.yaml
@@ -37,10 +37,16 @@ spec:
               value: {{ .Values.auth_scope_project }}
             - name: REACT_APP_ALERTMANAGER_API_ENDPOINT
               value: {{ .Values.alertmanager_api_endpoint }}
+            - name: REACT_APP_PAGERDUTY_API_ENDPOINT
+              value: {{ .Values.pagerduty_api_endpoint }}
+            - name: REACT_APP_PAGERDUTY_API_TOKEN
+              value: {{ .Values.pagerduty_api_token }}
             - name: ALERTS_UPDATE_TIMEOUT_SEC
               value: {{ .Values.alerts_update_timeout_sec | quote }}
             - name: SILENCES_UPDATE_TIMEOUT_SEC
               value: {{ .Values.silences_update_timeout_sec | quote }}
+            - name: ACKED_ALERTS_UPDATE_TIMEOUT_SEC
+              value: {{ .Values.acked_alerts_update_timeout_sec }}
           livenessProbe:
             httpGet:
               path: /system/liveliness
