supernova: quote values

--- a/global/supernova/templates/deployment.yaml
+++ b/global/supernova/templates/deployment.yaml
@@ -46,7 +46,7 @@ spec:
             - name: SILENCES_UPDATE_TIMEOUT_SEC
               value: {{ .Values.silences_update_timeout_sec | quote }}
             - name: ACKED_ALERTS_UPDATE_TIMEOUT_SEC
-              value: {{ .Values.acked_alerts_update_timeout_sec }}
+              value: {{ .Values.acked_alerts_update_timeout_sec | quote }}
           livenessProbe:
             httpGet:
               path: /system/liveliness
