add prometheus thanos sidecar as store to fill 2h gap

--- a/common/prometheus-server/templates/thanos/prometheus-thanosQueryDeployment.yaml
+++ b/common/prometheus-server/templates/thanos/prometheus-thanosQueryDeployment.yaml
@@ -34,6 +34,7 @@ spec:
         - --query.replica-label=prometheus_replica
         - --query.auto-downsampling
         - --store={{ include "prometheus.fullName" . }}-thanos-store:{{ required ".Values.thanos.store.service.grpcPort missing" .Values.thanos.querier.service.grpcPort }}
+        - --store={{ include "prometheus.fullName" . }}:10901
         - --web.route-prefix={{ required ".Values.thanos.querier.webRouteprefix missing" .Values.thanos.querier.webRouteprefix }}
         - --web.external-prefix={{ required ".Values.thanos.querier.webRouteprefix missing" .Values.thanos.querier.webRouteprefix }}
         - --cluster.peers={{ include "thanos.peers" . }}
