--- a/common/prometheus-server/values.yaml
+++ b/common/prometheus-server/values.yaml
@@ -275,10 +275,16 @@ serviceDiscoveries:
   # SD for Kubernetes services and endpoints.
   endpoints:
     enabled: true
+    # Only scrape services and endpoints with annotation prometheus.io/targets: $prometheusName.
+    # If set to false, all targets are scraped.
+    limitToPrometheusTargets: true
 
   # SD for Kubernetes Pods. See https://github.com/coreos/prometheus-operator/issues/38.
   pods:
     enabled: false
+    # Only scrape pods with annotation prometheus.io/targets: $prometheusName.
+    # If set to false, all targets are scraped.
+    limitToPrometheusTargets: true
 
 # The pod's tolerations.
 # See https://kubernetes.io/docs/concepts/configuration/taint-and-toleration
