fix kubernikus support seed

--- a/openstack/kubernikus/templates/support_seed.yaml
+++ b/openstack/kubernikus/templates/support_seed.yaml
@@ -3,10 +3,9 @@
 apiVersion: "openstack.stable.sap.cc/v1"
 kind: "OpenstackSeed"
 metadata:
-  name: {{ required "missing .name" .Values.name }}-support-seed
+  name: kubernikus-support-seed
 spec:
   requires:
-  - {{ .Release.Namespace}}/{{ required "missing .name" .Values.name }}-seed
   {{- range $domains }}
   - {{ $.Values.global.keystoneNamespace }}/domain-{{ . | lower }}-seed
   {{- end }}
