add cp domain to kubernikus seed

--- a/openstack/kubernikus/templates/support_seed.yaml
+++ b/openstack/kubernikus/templates/support_seed.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.seedSupportTeams }}
-{{- $domains := list "ccadmin" "bs" "hcm" "hcp03" "hec" "monsoon3" "s4" "wbs"}}
+{{- $domains := list "ccadmin" "bs" "hcm" "hcp03" "hec" "monsoon3" "s4" "wbs" "cp"}}
 apiVersion: "openstack.stable.sap.cc/v1"
 kind: "OpenstackSeed"
 metadata:
